about section mobile app fix

--- a/query.css
+++ b/query.css
@@ -93,19 +93,26 @@
     html {
         scroll-behavior: smooth;
     }
-
+    
     .window {
         display: grid;
         grid-template-columns: 1fr 6vh;
         height: 100vh;
     }
 
-    
     .header, .msg2, .tabs, .footer {
         height: fit-content;
     }
 
+    .main {
+        grid-column: 1;
+        border: 2px solid black;
+        width: 100%;
+        height: 100%;
+    }
+
     .header {
+        grid-column: 1;
         background-color: #C4A1FF;
     }
 
@@ -114,17 +121,18 @@
     }
 
     .nav {
+        grid-column: 2;
         top: 0;
         bottom: 0;
         right: 0;
         position: fixed;
-        grid-column: 2;
         border-top: none;
         border-bottom: none;
         border-left: .1vh solid black;
         flex-direction: column;
         justify-content: center;
-        width: 6.2vh;
+        width: 6vh;
+        height: 100%;
         background-color: #50FFAF;
     }
 
@@ -147,6 +155,10 @@
         width: 100%;
     }
 
+    .serv:active {
+        transform: none;
+    }
+
     #website {
         border-radius: 50% 50% 0 0;
     }
@@ -161,7 +173,7 @@
     
     .msg2 {
         z-index: -1;
-        bottom: 29%;
+        top: 48%;
         left: 7%;
         width: 100%;
     }
@@ -183,7 +195,6 @@
         top: 18.8vh;
         display: flex;
         flex-direction: column-reverse;
-        grid-column: 1;
         width: 100%;
     }
     
@@ -231,7 +242,6 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        grid-column: 1;
         position: static;
         width: 100%;
     }
